--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.19",
     "@reduxjs/toolkit": "^2.2.3",
     "clsx": "^2.1.0",
+    "firebase": "^10.11.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
